# Tangy

./: .gitignore  Makefile  Makefile.am  algebra.cc  algebra.h  algebra.hcc  algebra.py  configure.ac  euclid.py  game.h  geometry.py  gtans.cc  gtans.py  gtans.xml  paths.py  render.py  tans.h  tans.hcc
animation/: .gitignore  Makefile  organic.cc  organic.frag
config/: .gitignore  CGAL.m4  glew.m4
data/: Makefile.am  gtans.xml  shader.frag  tangy.xcf  tangy.xml
prototype/animation/: .gitignore  Makefile  ogl.cpp  organic.cc  texgen.c  textfile.h
prototype/python/: algebra.py  game.py  gtans.py
src/: .gitignore  Makefile.am  algebra.cc  algebra.h  algebra.hcc  animation.h  cgal-test.cc  controller.cc  controller.h  controller.hcc  geometry.cc  geometry.h  geometry.hcc  gtans.cc  motion.cc  numbers.h  render_basic.h  render_basic.hcc  render_opengl.h  resources.cc  resources.h  tangy-gtk.cc  tans.h  tans.hcc  tans_basic.h  tans_nocollide.h  tans_nocollide.hcc  test.cc  traits.h  traits_nocollide.h  utils.h  utils.hcc
